--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "keywords": [],
   "devDependencies": {
     "@types/chrome": "0.0.75",
+    "@types/firebase": "^3.2.1",
     "@types/react": "^16.7.8",
     "@types/react-dom": "^16.0.11",
     "css-loader": "^1.0.1",
@@ -25,7 +26,6 @@
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
-    "@react-firebase/database": "^0.3.11",
     "firebase": "^8.3.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3"
