--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,10 @@
         "sourceMap": true,
         "target": "es6",
         "module": "commonjs",
-        "jsx": "react"
+        "jsx": "react",
+        "typeRoots": [
+            "./@types"
+        ]
     },
     "exclude": [
         "node_modules",
